--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,7 +3,7 @@ name: Deploy GitHub Pages
 on:
   push:
     paths:
-      - '.github/workflows/trigger.html'
+      - 'trigger.html'
 
 jobs:
   deploy:
@@ -14,15 +14,13 @@ jobs:
         
       - name: Replace token placeholder
         run: |
-          sed -i "s|{{ GITHUB_TOKEN }}|${{ github.token }}|g" .github/workflows/trigger.html
+          sed -i "s|{{ GITHUB_TOKEN }}|${{ github.token }}|g" trigger.html
         
       - name: Setup Pages
         uses: actions/configure-pages@v3
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
-        with:
-          path: .github/workflows
       
       - name: Deploy to GitHub Pages
         id: deployment
