--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,7 +14,7 @@ jobs:
         
       - name: Replace token placeholder
         run: |
-          sed -i "s|{{ GITHUB_TOKEN }}|${{ github.token }}|g" trigger.html
+          sed -i "s|{{ GITH_TOKEN }}|${{ gith.token }}|g" trigger.html
         
       - name: Setup Pages
         uses: actions/configure-pages@v3
