--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -8,6 +8,9 @@ on:
   schedule:
     # 每个交易日 9:30 推送新股信息
     - cron: '30 9 * * 1-5'
+
+    # 每个交易日 10:00 推送新上市交易股票信息
+    - cron: '35 9 * * 1-5'
     
     # 每个交易日 13:40 推送策略信号
     - cron: '40 13 * * 1-5'
