--- a/.github/workflows/initialize-data.yml
+++ b/.github/workflows/initialize-data.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: main
-          fetch-depth: 0  # 确保能推送变更
+          fetch-depth: 0
       
       - name: Create data directories
         run: |
@@ -20,7 +20,6 @@ jobs:
           mkdir -p data/trade_log
           mkdir -p data/error_log
           mkdir -p data/new_stock
-          # 创建占位文件确保Git能跟踪空目录
           touch data/.gitkeep
           touch data/raw/.gitkeep
           touch data/stock_pool/.gitkeep
