--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -3,22 +3,22 @@ name: ETF Strategy Scheduler
 on:
   schedule:
     # 每个交易日 9:30 推送新股信息和新上市交易股票信息 (北京时间)
-    - cron: '30 1 * * 1-5'
+    - cron: '30 1 * * 1-5'  # UTC 1:30 = 北京时间 9:30
     
     # 每个交易日 13:40 推送策略信号
-    - cron: '40 5 * * 1-5'
+    - cron: '40 5 * * 1-5'  # UTC 5:40 = 北京时间 13:40
     
     # 每周五 16:00 更新股票池
-    - cron: '0 8 * * 5'
+    - cron: '0 8 * * 5'  # UTC 8:00 = 北京时间 16:00
     
     # 每个交易日 15:30 爬取日线数据
-    - cron: '30 7 * * 1-5'
+    - cron: '30 7 * * 1-5'  # UTC 7:30 = 北京时间 15:30
     
     # 盘中数据爬取
-    - cron: '35 1,2,3,5,6 * * 1-5'
+    - cron: '35 1,2,3,5,6 * * 1-5'  # UTC 时间 = 北京时间 - 8
     
     # 每天 00:00 清理旧数据
-    - cron: '0 16 * * *'
+    - cron: '0 16 * * *'  # UTC 16:00 = 北京时间 00:00
   
   # 允许手动触发
   workflow_dispatch:
@@ -45,7 +45,7 @@ jobs:
   run-strategy:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # 必须是 write
+      contents: write
       id-token: write
       pull-requests: write
       
@@ -79,6 +79,9 @@ jobs:
           TUSHARE_TOKEN: ${{ secrets.TUSHARE_TOKEN }}
           MESSAGE_FOOTER: ${{ secrets.MESSAGE_FOOTER }}
         run: |
+          # 打印任务信息
+          echo "执行任务: $TASK"
+          
           # 执行主程序
           python main.py
           
@@ -87,7 +90,7 @@ jobs:
           git config user.email "actions@github.com"
           git add data/
           git commit -m "自动更新策略数据 $(date)" || echo "No changes to commit"
-          git push || echo "Failed to push changes"
+          git push origin main || echo "Failed to push changes"
 
       - name: Verify execution
         run: |
