--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -26,7 +26,7 @@ on:
       task:
         description: '选择要执行的任务'
         required: true
-        default: 'run_new_stock_info'
+        # default: 'run_new_stock_info'
         type: choice
         options:
           - 'test_message'
