--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,6 @@
-# 环境变量
+# 保留环境变量和Python缓存忽略
 .env
-
-# Python
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
-*.pyc
-*.pyc
-*.pyc
-*.pyc
-*.pyc
-
-# 数据目录（这些将在Glitch中自动创建）
-data/raw/
-data/stock_pool/
-data/trade_log/
-data/arbitrage/
-data/error_log/
-data/new_stock/
-# 忽略大文件或敏感信息
-data/raw/*.csv
